--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5"
+  },
+  "dependencies": {
+    "uuidv4": "^6.2.12"
   }
 }
