--- a/package.json
+++ b/package.json
@@ -1,19 +1,34 @@
 {
+  "name": "indecision-app",
+  "version": "1.0.0",
+  "main": "index.js",
+  "author": "Niansyuan Wang <mich8588@gmail.com>",
+  "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.15.8",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1"
+    "webpack-cli": "^4.9.0"
   },
   "scripts": {
     "serve": "live-server public/",
-    "build": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch"
+    "build": "webpack --watch",
+    "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.2",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "jquery": "^3.6.0",
-    "live-server": "^1.2.1"
-  }
+    "live-server": "^1.2.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "validator": "^13.6.0",
+    "webpack": "^5.58.2",
+    "webpack-dev-server": "^4.3.1"
+  },
+  "description": ""
 }
