--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "scripts": {
     "serve": "live-server public/",
-    "build": "webpack --watch",
-    "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch"
+    "build": "webpack",
+    "dev-server":"webpack-dev-server"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
@@ -22,6 +22,7 @@
     "babel-loader": "^8.2.2",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "dev-server": "^0.2.0",
     "jquery": "^3.6.0",
     "live-server": "^1.2.1",
     "react": "^17.0.2",
