--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
     "babel-loader": "^8.2.2",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^6.4.0",
     "dev-server": "^0.2.0",
     "jquery": "^3.6.0",
     "live-server": "^1.2.1",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.3",
+    "sass-loader": "^12.2.0",
+    "style-loader": "^3.3.0",
     "validator": "^13.6.0",
     "webpack": "^5.58.2",
     "webpack-dev-server": "^4.3.1"
